# FEEBoardGUI-AddDB

./: .gitignore  CMakeLists.txt  EnableTDC.cpp  README.md  main.cpp
Configuration/: sc_register_pd.txt  sc_register_t&h.txt
Configuration/CRTest-Bkp/BotLayer/: sc_register_pd.txt
Configuration/CRTest/BotLayer/: probe_register.txt  sc_register_pd.txt
Configuration/CRTest/TopLayer/: probe_register.txt  sc_register_pd.txt
Configuration/Fiber-SPETest/: sc_register_init.txt
DataBase/: Calibration.db  GenerateDB.sql
include/: AutoScreenZoom.h  DBManager.h  DBWindow.h  FEEControlWidget.h  MultiBoard.h  configfileparser.h  feecontrol.h
src/: AutoScreenZoom.cpp  DBManager.cpp  DBWindow.cpp  DBWindow.ui  FEEControlWidget - 副本.ui  FEEControlWidget.cpp  FEEControlWidget.ui  General.cpp  MultiBoard.cpp  MultiBoard.ui  datamanager.cpp  feecontrol.cpp
src/Visa/: VisaDAQControl.cpp
